# GestorImobiliaro-ds-persitencia-03

./: .env  DIAGRAMA.md  README.md  divisao_tarefas.txt  docker-compose.yaml  populate_db.py  pyproject.toml
app/: main.py
app/api/: consultas.py  contrato.py  dashboard.py  imovel.py  inquilino.py  proprietario.py
app/core/: config.py
app/database/: database.py
app/models/: contrato.py  imovel.py  inquilino.py  proprietario.py
