[project]
name = "gestorimobiliario"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beanie>=1.25.0,<2.0.0",
    "faker>=40.1.2",
    "fastapi>=0.128.0",
    "motor>=3.4.0,<3.6.0",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.5.0,<4.9.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
